# ccgr_portal_data_loading

./: .gitignore  README.md  pyproject.toml
engreitz_encode/: download_series.py  gen_engreitz.py
src/data_utilities/: __init__.py  analysis_metadata.schema.json  analysis_validation.py  bulk_upload.py  experiment_metadata.schema.json  experiment_validation.py  hg38_genes.tsv  liftover.py  metadata_validation.py
src/encode/: __init__.py  download_series.py
src/encode/engreitz/: gen_engreitz.py
src/encode/myc/: myc.py
src/encode/strouse_dura/: sd.py
src/engreitz_encode/: gen_engreitz.py  gen_engreitz_marimo.py
src/reddylab/: __init__.py  bounds_2021_scceres.py  common.py  klann_2021_scceres.py  klann_2021_wgceres.py  mccutcheon_2022_scceres.py  siklinka_2022_atacstarrseq.py
