[project]
name = "CCGRDataUtilities"
authors = [{ name = "Thomas Cowart", email = "thomas.cowart@duke.edu" }]
description = "Various utilities for compiling and validating data for the CCGR Portal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["requests>=2.32", "jsonschema>=4.22", "httpx>=0.27"]
version = "1.0"

[project.scripts]
ccgr_ul = "data_utilities.bulk_upload:run_cli"
ccgr_av = "data_utilities.analysis_validation:run_cli"
ccgr_ev = "data_utilities.experiment_validation:run_cli"
ccgr_mv = "data_utilities.metadata_validation:run_cli"
dl_series = "encode.download_series:run_cli"
gen_engreitz = "encode.engreitz.gen_engreitz:run_cli"
gen_encode_myc = "encode.myc.myc:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_utilities = ["*.schema.json"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
